[58349] feat: scripts - include in PB editor option