@@ -4,7 +4,6 @@ import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import jakarta.persistence.*;
 import jakarta.validation.constraints.NotBlank;
@@ -85,6 +84,10 @@ public class InsertScriptBean extends ActiveRecordRepository implements Serializ
     //deprecated, not need anymore @Temporal(TemporalType.TIMESTAMP)
     @DataTableColumn(inputType=DataTableColumnType.DATETIME, tab="scriptPerms", title="user.admin.allowLoginEnd")
     Date validTo;
+
+    @Column(name="include_in_editor")
+    @DataTableColumn(inputType=DataTableColumnType.BOOLEAN, tab="scriptPerms", title="components.insert_script.include_in_editor", visible = false)
+    Boolean includeInEditor;
 
     @JsonManagedReference(value="insertScriptBeanGr")
     @OneToMany(mappedBy="insertScriptBeanGr",fetch=FetchType.LAZY,cascade={CascadeType.ALL},orphanRemoval=true)
@@ -210,6 +213,14 @@ public class InsertScriptBean extends ActiveRecordRepository implements Serializ
         this.validTo = validTo;
     }
 
+    public Boolean getIncludeInEditor() {
+        return includeInEditor;
+    }
+
+    public void setIncludeInEditor(Boolean includeInEditor) {
+        this.includeInEditor = includeInEditor;
+    }
+
     public List<InsertScriptGroupBean> getGroupIds() {
         return groupIds;
     }
@@ -265,7 +276,7 @@ public class InsertScriptBean extends ActiveRecordRepository implements Serializ
         try {
             groups = getGroupIds().stream().map(g ->
                 GroupsDB.getInstance().getGroupNamePath(g.groupId) + " (" + g.groupId + ")"
-            ).collect(Collectors.toList());
+            ).toList();
         } catch (Exception e) {
 
         }
@@ -280,7 +291,7 @@ public class InsertScriptBean extends ActiveRecordRepository implements Serializ
                     return "";
                 }
 
-            }).collect(Collectors.toList());
+            }).toList();
         } catch (Exception e) {
 
         }
